spade-tests/src/snapshots/spade_tests__integration__trait_tests__pipelines_in_impl_blocks_are_graceuflly_disallowed.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Pipelines are not allowed in impl blocks
  ┌─ testinput:4:5
  │
4 │     pipeline(0) a() -> bool {true}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Not allowed here
  │
  = Did you intend to define a function


